<resources>
    <string name="app_name">ClosetMarket</string>
    <string name="tagline">Buy and sell from your closet</string>
    <string name="change_photo">Change Photo</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="password">Password</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>
    <string name="photo">Photo</string>
    <string name="tap_to_add_photo">Tap to add photo</string>
    <string name="create_post">Create Post</string>
    <string name="title">Title</string>
    <string name="title_hint">Enter item title</string>
    <string name="description">Description</string>
    <string name="description_hint">Describe your item</string>
    <string name="category">Category</string>
    <string name="condition">Condition</string>
    <string name="condition_new">New</string>
    <string name="condition_like_new">Like New</string>
    <string name="condition_used">Used</string>
    <string name="price">Price</string>
    <string name="free_give_away">Free (give away)</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="street_hint">Street address</string>
    <string name="city_hint">Search city…</string>
    <string name="location_hint">Search for address…</string>
    <string name="select_city">Select City</string>
    <string name="edit_post">Edit Post</string>
    <string name="save">Save</string>
    <string name="choose_image_source">Choose Image Source</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="search_hint">Search for items...</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="no_items_found">No items found</string>
    <string name="adjust_filters">adjust filters</string>
    <string name="showing_items">showing %1$d items</string>
    <string name="item_details">Item Details</string>
    <string name="pickup_location_label">Pickup Location</string>
    <string name="posted_by">Posted by</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="free_label">Free</string>
    <string name="contact_seller_msg">Contact seller</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="items">Items</string>
    <string name="sold">Sold</string>
    <string name="given">Given</string>
    <string name="my_items">My Items</string>
    <string name="no_items_yet">No items yet</string>
    <string name="start_posting">Start posting your items to share with others!</string>
    <string name="items_saved">%1$d items saved</string>
    <string name="wishlist_empty">Your wishlist is empty</string>
    <string name="save_items_hint">Save items to your wishlist to find them later</string>
    <string name="seller_no_email">Seller has no email</string>


</resources>